--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 
                <div class="carousel-item active">
                    <h2>Test</h2>
-    	<h4>I have been cooking since I was 8 years<br> old.I considered myself an artist who <br>developed into a craftsman.</h4>
+    	<h4>From these rapid developments, serving people became easy and fast<br> This service saved me time, <br> so I can request a car service any time I need. </h4>
         <img src="imeges/car_oil_change.png"  class="car-image" alt="">
-                   <h4>mary </h4>
+                   <h4>Mohammad </h4>
     </div>  
               
     
