--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     
             <div class="carousel-item">
                 <h2>Test</h2>
-    	<h4>Creativity is a baker’s greatest asset.<br> Their ability to take basic ingredients and <br>transform them into a truly magical art form</h4>
+    	<h4>It is difficult for me to go to the station to wash the car, I do not have the time to go to the station and wash my car<br> I do not have the time to go to the station and wash my car<br> Wonderful service!</h4>
       <img src="imeges/car_oil_change.png" class="car-image" alt="">
-                <h4>john </h4>
+                <h4>Ala'a </h4>
     </div> 
                   
 
