--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
                   
 
                <div class="carousel-item">
-    	<h4>Food decoration isn’t the only form of art<br> when it comes to cooking. The whole culinary<br> industry can be an art form.</h4>
+    	<h4>Providing this service to people who do not know the area helped them a lot. <br>Through Google Map, they can identify the stations and request this service ,<br> when it comes to cooking. The whole culinary </h4>
       <img src="imeges/car_oil_change.png" class="car-image" alt="">
-                   <h4>mohammed</h4>
+                   <h4>Noor</h4>
       </div> 
            
    <a class="carousel-control-prev" href="#carousel-slide" role="button" data-slide="prev">
