--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       
-       <link rel="shortcut icon" href="imeges/4.ico" type="image/x-icon">
+       <link rel="shortcut icon" href="/img/4.ico" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -97,7 +97,7 @@
                <div class="carousel-item active">
                    <h2>Test</h2>
     	<h4>From these rapid developments, serving people became easy and fast<br> This service saved me time, <br> so I can request a car service any time I need. </h4>
-        <img src="imeges/car_oil_change.png"  class="car-image" alt="">
+        <img src="/"  class="car-image" alt="">
                    <h4>Mohammad </h4>
     </div>  
               
